# MyTrainingTasks

./: README.md  asd.txt  configure.ac  kustomization.yaml  mysql.yaml  phpmyadmin.yaml  vp.yaml  vpc.yaml
c_spa_klimowicz/: README.md
c_spa_klimowicz/10.valgrind/: Makefile
c_spa_klimowicz/14.getopt/: Makefile
c_spa_klimowicz/14.getopt/src/: app.c
c_spa_klimowicz/16.assert/: Makefile
c_spa_klimowicz/task-app-and-test/: Makefile
c_spa_klimowicz/task_1/: app.c  gen_num.c
c_spa_klimowicz/task_3/: Makefile
ioctl/: Makefile
ioctl/includes/: ioctl_cmds.h
ioctl/src/: app.c  ioctl-module.c
ioctl_driver_done/includes/: ioctl_cmds.h
ioctl_driver_done/src/: app.c  ioctl-module.c
mazurek/lab1/: l1  l1.c
mazurek/lab13/: a.out  l1  l2  zad.c  zad2_OpenMP.c
mazurek/lab15/: l  zad.c
mazurek/lab16/: l  l.c  printf.txt  res.txt
mazurek/lab17/: l  l.c  res.txt  test
mazurek/lab18/: l1  l1.c  l2  l2.c  res1.txt  res2.txt  test
mazurek/lab19/: l.c  l_bez_openmp_bez_O2.txt  l_bezz_openmp_bez_O2  l_bezz_openmp_z_O2  l_bezz_openmp_z_O2.txt  l_z_openmp_bez_O2  l_z_openmp_bez_O2.txt  l_z_openmp_z_O2  l_z_openmp_z_O2.txt
mazurek/lab2/: l2  l2.c
mazurek/lab20/: l.c  res.txt
mazurek/lab21/: l  l.c  res1.txt  res2.txt  wnioski.txt
mazurek/lab22/: a.out  gcc_lc  l.c  res.txt
mazurek/lab3/: l3  l3.c  results.txt
mazurek/lab4/: l4  l4.c  results.txt
mazurek/lab5/: l5  l5.c  l5_pi.c  res.txt
mazurek/lab7/: l  l.c  res.txt
mazurek/lab8/: l  l.c  results.txt
task_1/: Makefile
task_2/: Makefile  app.c
task_3/: Makefile  app.c  gen_num.c  gen_num.h
(+7 files in other folders)
