AC_INIT(HelloWorldCustomLayer, 1.0, klimowicz.patryk.pk@gmail.com)
AC_CONFIG_SRCDIR([HelloWorld.c])
AM_INIT_AUTOMAKE(HelloWorldCustomLayer, main)

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Checks for libraries.
AM_PROG_LIBTOOL

# Set shared libraries
AC_DISABLE_STATIC
AC_ENABLE_SHARED

#AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
